--- a/dev/sass/_variables.scss
+++ b/dev/sass/_variables.scss
@@ -1,1 +1,17 @@
-$font: 'Arial', sans-serif;
+$font-body-roboto-cons:'Roboto Condensed', sans-serif;
+$font-body-open-sans:'Open Sans', sans-serif;
+$font-weight-body:400;
+$font-size-body:16px;
+
+// HEADER
+$header-color-back:#fff;
+$header-color:#000;
+$header-height:70px;
+// HEADER
+
+// NAVBAR
+$nav-color-back:#fff;
+$nav-color:#000;
+$nav-height:70px;
+// NAVBAR
+
