--- a/dev/sass/_bootstrap.scss
+++ b/dev/sass/_bootstrap.scss
@@ -15,7 +15,7 @@
 
 // Core CSS
 @import "../libs/bootstrap-sass/assets/stylesheets/bootstrap/scaffolding";
-//@import "../libs/bootstrap-sass/assets/stylesheets/bootstrap/type";
+@import "../libs/bootstrap-sass/assets/stylesheets/bootstrap/type";
 @import "../libs/bootstrap-sass/assets/stylesheets/bootstrap/code";
 @import "../libs/bootstrap-sass/assets/stylesheets/bootstrap/grid";
 @import "../libs/bootstrap-sass/assets/stylesheets/bootstrap/tables";
