--- a/dev/sass/_navbar.scss
+++ b/dev/sass/_navbar.scss
@@ -19,7 +19,7 @@
 			line-height:$nav-height;
 			height:$nav-height;
 			span {
-				border-bottom:1px solid #000;
+				border-bottom:1px solid $color-gold;
 				width: 19px;
 				height:1px;
 				display: inline-block;
