--- a/dev/sass/_variables.scss
+++ b/dev/sass/_variables.scss
@@ -2,6 +2,7 @@ $font-body-roboto-cons:'Roboto Condensed', sans-serif;
 $font-body-open-sans:'Open Sans', sans-serif;
 $font-weight-body:400;
 $font-size-body:16px;
+$color-gold:#D4AF53;
 
 // HEADER
 $header-color-back:#fff;
