--- a/dev/sass/style.scss
+++ b/dev/sass/style.scss
@@ -16,11 +16,34 @@ body {
 	background-size: cover;
 	height: 464px;
 	position: relative;
-	&_content {
-		position: absolute;
-		&_forma {
-		
-	    }
+
+}
+.description {
+	position: absolute;
+	margin-top: 100px;
+	width: 100%;
+	height: 200px;
+	background-color: rgba(0,0,0,0.4);
+	border-top: 1px solid;
+	border-bottom: 1px solid;
+	border-color: $color-gold;
+
+	.h1, .h2 {
+		text-align: center;
+		color: #fff;
+		font-family: 'PT Serif', serif;
+		//font-weight: 700;
 	}
+
+
+}
+.description_icons {
+	position: absolute;
+	bottom: 40px;
+	width: 100%;
+	color: #fff;
+	text-align: center;
+	font-size: 24px;
+	font-family: 'PT Serif', serif;
 }
 // SLIDER
