--- a/dev/css/style.css
+++ b/dev/css/style.css
@@ -4863,19 +4863,18 @@ body {
 /* line 14, ../sass/style.scss */
 h2, .h2 {
   text-align: center;
-  font-weight: 700;
   padding: 10px;
   text-transform: uppercase;
   font-size: 22px; }
 
-/* line 24, ../sass/style.scss */
+/* line 23, ../sass/style.scss */
 .check-in {
   background: url("../img/top.jpg") no-repeat;
   background-size: cover;
   height: 464px;
   position: relative; }
 
-/* line 31, ../sass/style.scss */
+/* line 30, ../sass/style.scss */
 .description {
   position: absolute;
   margin-top: 100px;
@@ -4885,13 +4884,16 @@ h2, .h2 {
   border-top: 1px solid;
   border-bottom: 1px solid;
   border-color: #D4AF53; }
-  /* line 41, ../sass/style.scss */
+  /* line 40, ../sass/style.scss */
   .description .h1, .description .h2 {
     text-align: center;
     color: #fff;
     font-family: 'PT Serif', serif; }
+    /* line 45, ../sass/style.scss */
+    .description .h1 b, .description .h2 b {
+      font-size: 32px; }
 
-/* line 50, ../sass/style.scss */
+/* line 52, ../sass/style.scss */
 .description_icons {
   position: absolute;
   bottom: 40px;
@@ -4901,18 +4903,18 @@ h2, .h2 {
   font-size: 24px;
   font-family: 'PT Serif', serif; }
 
-/* line 62, ../sass/style.scss */
+/* line 64, ../sass/style.scss */
 .rooms {
   padding-top: 20px;
   font-family: "Open Sans", sans-serif; }
-  /* line 65, ../sass/style.scss */
+  /* line 67, ../sass/style.scss */
   .rooms .h2 {
     text-align: center;
     font-weight: 700;
     padding: 10px;
     text-transform: uppercase;
     font-size: 22px; }
-  /* line 72, ../sass/style.scss */
+  /* line 74, ../sass/style.scss */
   .rooms p {
     max-width: 450px;
     text-align: center;
@@ -4920,7 +4922,7 @@ h2, .h2 {
     font-weight: 300;
     color: #D4AF53;
     padding-bottom: 15px; }
-  /* line 80, ../sass/style.scss */
+  /* line 82, ../sass/style.scss */
   .rooms_number {
     font-weight: 400;
     text-align: center;
@@ -4928,19 +4930,25 @@ h2, .h2 {
     padding: 20px;
     line-height: 1.7em;
     font-size: 14px; }
-  /* line 88, ../sass/style.scss */
+  /* line 90, ../sass/style.scss */
   .rooms_price {
     font-weight: 800;
     font-size: 24px;
     color: #D4AF53; }
-    /* line 92, ../sass/style.scss */
+    /* line 94, ../sass/style.scss */
     .rooms_price i {
       font-size: 20px; }
 
-/* line 101, ../sass/style.scss */
+/* line 103, ../sass/style.scss */
 .features h2 {
-  margin: 30px; }
-/* line 107, ../sass/style.scss */
+  margin: 30px;
+  font-weight: 700; }
+/* line 110, ../sass/style.scss */
 .features_text {
   text-align: center;
   padding: 25px; }
+
+/* line 119, ../sass/style.scss */
+.map h2 {
+  margin: 30px;
+  font-weight: 700; }
