--- a/dev/sass/style.scss
+++ b/dev/sass/style.scss
@@ -13,7 +13,6 @@ body {
 //TYPOGRAPHY
 h2,.h2 {
 		text-align: center;
-		font-weight: 700;
 		padding: 10px;
 		text-transform: uppercase;
 		font-size: 22px;
@@ -43,6 +42,9 @@ h2,.h2 {
 		color: #fff;
 		font-family: 'PT Serif', serif;
 		//font-weight: 700;
+		b {
+			font-size: 32px;
+		}
 	}
 
 
@@ -100,6 +102,7 @@ h2,.h2 {
 .features {
 	h2 {
 		margin: 30px;
+		font-weight: 700;
 	}
 	&_icon {
 
@@ -110,3 +113,12 @@ h2,.h2 {
 	}
 }
 //FEATURES
+
+//MAP
+.map {
+	h2 {
+		margin: 30px;
+		font-weight: 700;
+	}
+}
+//MAP
