--- a/dev/css/style.css
+++ b/dev/css/style.css
@@ -4952,3 +4952,6 @@ h2, .h2 {
 .map h2 {
   margin: 30px;
   font-weight: 700; }
+/* line 123, ../sass/style.scss */
+.map_yandex {
+  min-height: 350px; }
