--- a/dev/sass/style.scss
+++ b/dev/sass/style.scss
@@ -8,6 +8,9 @@ body {
 	font-family:$font-body-open-sans;
 	font-weight:$font-weight-body;
 	font-size:$font-size-body;
+	ul li {
+		list-style-type: none;
+	}
 }
 
 //TYPOGRAPHY
@@ -125,7 +128,26 @@ h2,.h2 {
 	}
 }
 //MAP
-
 //FOOTER
-
+.footer {
+	background-image: url(../img/footer-back.png);
+	background-repeat: no-repeat;
+	background-size: 100%;
+	color: #fff;
+	padding-top: 300px;
+	
+	position: relative;
+	&_logo {
+		@extend .logo;
+		color: #fff;
+		padding: 50px 0;
+	}
+	ul li {
+		padding: 5px;
+		a {
+			padding: 5px;
+			color: #999999;
+		}
+	}
+}
 //FOOTER
