--- a/dev/sass/style.scss
+++ b/dev/sass/style.scss
@@ -21,25 +21,26 @@ h2,.h2 {
 	}
 //TYPOGRAPHY
 //BRONIROVANIE
-#_pmsWidget_{position: relative;top: 40px;}
+#_pmsWidget_{position: absolute;top: 40px;}
 // SLIDER
-.check-in {
-	background: url('../img/top.jpg') no-repeat;
-	background-size: cover;
-	height: 464px;
+.slider {
 	position: relative;
-
-}
-.description {
-	position: absolute;
-	margin-top: 100px;
-	width: 100%;
-	height: 200px;
-	background-color: rgba(0,0,0,0.5);
-	border-top: 1px solid;
-	border-bottom: 1px solid;
-	border-color: $color-gold;
-
+	&-content {
+		padding-top:100px;
+		min-height:464px;
+	}
+	&-img{
+		position:absolute;
+		width:100%;
+		height: 100%;
+		min-height: 464px;
+		overflow:hidden;
+		z-index: -1;
+	}
+	&-responsive{
+		min-width:100%;
+		height:100%;
+	}
 	.h1, .h2 {
 		text-align: center;
 		color: #fff;
@@ -50,21 +51,16 @@ h2,.h2 {
 		}
 	}
 }
-@media (min-width: 768px) {
-	.description {
-		height: 240px;}
-}
-@media (min-width: 992px) {
-	.description {
-		height: 200px;}
-}
-@media (min-width: 1200px) {
-	.description {
-		height: 150px;}
+.description {
+	width: 100%;
+	background-color: rgba(0,0,0,0.5);
+	border-top: 1px solid;
+	border-bottom: 1px solid;
+	border-color: $color-gold;
 }
 .description_icons {
-	position: absolute;
-	bottom: 40px;
+	position:absolute;
+	bottom:10px;
 	width: 100%;
 	color: #fff;
 	text-align: center;
@@ -108,6 +104,9 @@ h2,.h2 {
 			font-size: 20px;
 		}
 	}
+}
+.nomer-image {
+	padding:10px
 }
 // НОМЕРА 
 
