--- a/dev/css/style.css
+++ b/dev/css/style.css
@@ -4957,12 +4957,12 @@ h2, .h2 {
     text-transform: uppercase;
     font-size: 22px; }
   /* line 83, ../sass/style.scss */
-  .rooms p {
+  .rooms_gold {
+    color: #D4AF53;
     max-width: 450px;
     text-align: center;
     font-style: 14px;
     font-weight: 300;
-    color: #D4AF53;
     padding-bottom: 15px; }
   /* line 91, ../sass/style.scss */
   .rooms_number {
