--- a/dev/sass/style.scss
+++ b/dev/sass/style.scss
@@ -80,12 +80,12 @@ h2,.h2 {
 		text-transform: uppercase;
 		font-size: 22px;
 	}
-	p {
+	&_gold {
+		color: $color-gold;
 		max-width: 450px;
 		text-align: center;
 		font-style: 14px;
 		font-weight: 300;
-		color: $color-gold;
 		padding-bottom: 15px;
 	}
 	&_number {
