--- a/dev/sass/style.scss
+++ b/dev/sass/style.scss
@@ -21,7 +21,7 @@ h2,.h2 {
 	}
 //TYPOGRAPHY
 //BRONIROVANIE
-#_pmsWidget_{position: absolute;top: 40px;}
+#_pmsWidget_{position: absolute;top: 40px;z-index:0;}
 // SLIDER
 .slider {
 	position: relative;
