--- a/dev/sass/meta.scss
+++ b/dev/sass/meta.scss
@@ -1,3 +1,16 @@
+@import "variables";
+@import "bootstrap";
+@import "header";
+@import "navbar";
+
+body {
+	font-family:$font-body-open-sans;
+	font-weight:$font-weight-body;
+	font-size:$font-size-body;
+	ul li {
+		list-style-type: none;
+	}
+}
 .tel_svyaz {
 	line-height:0.1em;
 	font-size:12px;
