--- a/dev/css/style.css
+++ b/dev/css/style.css
@@ -5910,26 +5910,30 @@ body {
     list-style-type: none; }
 
 /* line 16, ../sass/style.scss */
+h1, .h1 {
+  padding-bottom: 20px; }
+
+/* line 17, ../sass/style.scss */
 h2, .h2 {
   text-align: center;
   padding: 10px;
   text-transform: uppercase;
   font-size: 22px; }
 
-/* line 24, ../sass/style.scss */
+/* line 25, ../sass/style.scss */
 #_pmsWidget_ {
   position: absolute;
   top: 40px;
   z-index: 0; }
 
-/* line 26, ../sass/style.scss */
+/* line 27, ../sass/style.scss */
 .slider {
   position: relative; }
-  /* line 28, ../sass/style.scss */
+  /* line 29, ../sass/style.scss */
   .slider-content {
     padding-top: 100px;
     min-height: 464px; }
-  /* line 32, ../sass/style.scss */
+  /* line 33, ../sass/style.scss */
   .slider-img {
     position: absolute;
     width: 100%;
@@ -5937,20 +5941,20 @@ h2, .h2 {
     min-height: 464px;
     overflow: hidden;
     z-index: -1; }
-  /* line 40, ../sass/style.scss */
+  /* line 41, ../sass/style.scss */
   .slider-responsive {
     min-width: 100%;
     height: 100%; }
-  /* line 44, ../sass/style.scss */
+  /* line 45, ../sass/style.scss */
   .slider .h1, .slider .h2 {
     text-align: center;
     color: #fff;
     font-family: 'PT Serif', serif; }
-    /* line 49, ../sass/style.scss */
+    /* line 50, ../sass/style.scss */
     .slider .h1 b, .slider .h2 b {
       font-size: 32px; }
 
-/* line 54, ../sass/style.scss */
+/* line 55, ../sass/style.scss */
 .description {
   width: 100%;
   background-color: rgba(0, 0, 0, 0.5);
@@ -5958,7 +5962,7 @@ h2, .h2 {
   border-bottom: 1px solid;
   border-color: #D4AF53; }
 
-/* line 61, ../sass/style.scss */
+/* line 62, ../sass/style.scss */
 .description_icons {
   position: absolute;
   bottom: 10px;
@@ -5968,18 +5972,18 @@ h2, .h2 {
   font-size: 24px;
   font-family: 'PT Serif', serif; }
 
-/* line 73, ../sass/style.scss */
+/* line 74, ../sass/style.scss */
 .rooms {
   padding-top: 20px;
   font-family: "Open Sans", sans-serif; }
-  /* line 76, ../sass/style.scss */
+  /* line 77, ../sass/style.scss */
   .rooms .h2 {
     text-align: center;
     font-weight: 700;
     padding: 10px;
     text-transform: uppercase;
     font-size: 22px; }
-  /* line 83, ../sass/style.scss */
+  /* line 84, ../sass/style.scss */
   .rooms_gold {
     color: #D4AF53;
     max-width: 450px;
@@ -5987,7 +5991,7 @@ h2, .h2 {
     font-style: 14px;
     font-weight: 300;
     padding-bottom: 15px; }
-  /* line 91, ../sass/style.scss */
+  /* line 92, ../sass/style.scss */
   .rooms_number {
     font-weight: 400;
     text-align: center;
@@ -5995,56 +5999,70 @@ h2, .h2 {
     padding: 20px;
     line-height: 1.7em;
     font-size: 14px; }
-  /* line 99, ../sass/style.scss */
+  /* line 100, ../sass/style.scss */
   .rooms_price {
     font-weight: 800;
     font-size: 24px;
     color: #D4AF53; }
-    /* line 103, ../sass/style.scss */
+    /* line 104, ../sass/style.scss */
     .rooms_price i {
       font-size: 20px; }
 
-/* line 108, ../sass/style.scss */
+/* line 109, ../sass/style.scss */
 .nomer-image {
   padding: 10px; }
 
-/* line 115, ../sass/style.scss */
+/* line 116, ../sass/style.scss */
 .features h2 {
   margin: 30px;
   font-weight: 700; }
-/* line 122, ../sass/style.scss */
+/* line 123, ../sass/style.scss */
 .features_text {
   text-align: center;
   padding: 25px; }
 
 /* line 131, ../sass/style.scss */
+.cont-tel {
+  font-size: 22px;
+  padding-left: 5px;
+  vertical-align: bottom; }
+
+/* line 136, ../sass/style.scss */
+.cont-mail {
+  vertical-align: bottom; }
+
+/* line 137, ../sass/style.scss */
+.cont .cont2 {
+  margin-top: 10px; }
+
+/* line 141, ../sass/style.scss */
 .map h2 {
   margin: 30px;
   font-weight: 700; }
-/* line 135, ../sass/style.scss */
-.map_yandex {
-  min-height: 350px; }
+/* line 145, ../sass/style.scss */
+.map-yandex {
+  height: 350px; }
 
-/* line 141, ../sass/style.scss */
+/* line 151, ../sass/style.scss */
 .house {
   width: 100%;
   height: auto;
   max-height: 200px; }
 
-/* line 142, ../sass/style.scss */
+/* line 152, ../sass/style.scss */
 .footer {
   padding-bottom: 30px;
   background-color: #212221;
   color: #fff;
   position: relative; }
-  /* line 147, ../sass/style.scss */
+  /* line 157, ../sass/style.scss */
   .footer_logo {
     color: #fff;
     padding: 50px 0; }
-  /* line 152, ../sass/style.scss */
+  /* line 162, ../sass/style.scss */
   .footer ul li {
     padding: 5px; }
-    /* line 154, ../sass/style.scss */
+    /* line 164, ../sass/style.scss */
     .footer ul li a {
       padding: 5px;
       color: #999999; }
