--- a/dev/sass/style.scss
+++ b/dev/sass/style.scss
@@ -13,6 +13,7 @@ body {
 }
 
 //TYPOGRAPHY
+h1,.h1 {padding-bottom:20px;}
 h2,.h2 {
 		text-align: center;
 		padding: 10px;
@@ -127,13 +128,22 @@ h2,.h2 {
 //FEATURES
 
 //MAP
+.cont-tel {
+    font-size: 22px;
+    padding-left: 5px;
+	vertical-align: bottom;
+}
+.cont-mail{vertical-align: bottom;}
+.cont .cont2 {
+    margin-top: 10px;
+}
 .map {
 	h2 {
 		margin: 30px;
 		font-weight: 700;
 	}
-	&_yandex {
-		min-height: 350px;
+	&-yandex {
+		height: 350px;
 	}
 }
 //MAP
