--- a/dev/sass/_navbar.scss
+++ b/dev/sass/_navbar.scss
@@ -469,7 +469,7 @@ Main components
 		position: static;
 		margin: auto;
 		height: auto;
-		width: auto;
+		width: 80%;
 		overflow: visible;
 		background: transparent;
 		@include clearfix;
