--- a/dev/sass/style.scss
+++ b/dev/sass/style.scss
@@ -22,7 +22,7 @@ h2,.h2 {
 	}
 //TYPOGRAPHY
 //BRONIROVANIE
-#_pmsWidget_{position: absolute;top: 40px;z-index:0;}
+.pmsWidget{position: absolute;top: 40px;z-index:0;right:10%;left:auto;}
 // SLIDER
 .slider {
 	position: relative;
@@ -60,10 +60,10 @@ h2,.h2 {
 	border-color: $color-gold;
 }
 .description_icons {
-	position:absolute;
+//	position:absolute;
 	bottom:10px;
 	width: 100%;
-	color: #fff;
+//	color: #fff;
 	text-align: center;
 	font-size: 24px;
 	font-family: 'PT Serif', serif;
