--- a/dev/css/style.css
+++ b/dev/css/style.css
@@ -5920,7 +5920,11 @@ h2, .h2 {
   text-transform: uppercase;
   font-size: 22px; }
 
-/* line 25, ../sass/style.scss */
+/* line 23, ../sass/style.scss */
+.pull-left {
+  padding-right: 10px; }
+
+/* line 28, ../sass/style.scss */
 .pmsWidget {
   position: absolute;
   top: 40px;
@@ -5928,14 +5932,14 @@ h2, .h2 {
   right: 10%;
   left: auto; }
 
-/* line 27, ../sass/style.scss */
+/* line 30, ../sass/style.scss */
 .slider {
   position: relative; }
-  /* line 29, ../sass/style.scss */
+  /* line 32, ../sass/style.scss */
   .slider-content {
     padding-top: 100px;
     min-height: 464px; }
-  /* line 33, ../sass/style.scss */
+  /* line 36, ../sass/style.scss */
   .slider-img {
     position: absolute;
     width: 100%;
@@ -5943,20 +5947,20 @@ h2, .h2 {
     min-height: 464px;
     overflow: hidden;
     z-index: -1; }
-  /* line 41, ../sass/style.scss */
+  /* line 44, ../sass/style.scss */
   .slider-responsive {
     min-width: 100%;
     height: 100%; }
-  /* line 45, ../sass/style.scss */
+  /* line 48, ../sass/style.scss */
   .slider .h1, .slider .h2 {
     text-align: center;
     color: #fff;
     font-family: 'PT Serif', serif; }
-    /* line 50, ../sass/style.scss */
+    /* line 53, ../sass/style.scss */
     .slider .h1 b, .slider .h2 b {
       font-size: 32px; }
 
-/* line 55, ../sass/style.scss */
+/* line 58, ../sass/style.scss */
 .description {
   width: 100%;
   background-color: rgba(0, 0, 0, 0.5);
@@ -5964,7 +5968,7 @@ h2, .h2 {
   border-bottom: 1px solid;
   border-color: #D4AF53; }
 
-/* line 62, ../sass/style.scss */
+/* line 65, ../sass/style.scss */
 .description_icons {
   bottom: 10px;
   width: 100%;
@@ -5972,18 +5976,18 @@ h2, .h2 {
   font-size: 24px;
   font-family: 'PT Serif', serif; }
 
-/* line 74, ../sass/style.scss */
+/* line 77, ../sass/style.scss */
 .rooms {
   padding-top: 20px;
   font-family: "Open Sans", sans-serif; }
-  /* line 77, ../sass/style.scss */
+  /* line 80, ../sass/style.scss */
   .rooms .h2 {
     text-align: center;
     font-weight: 700;
     padding: 10px;
     text-transform: uppercase;
     font-size: 22px; }
-  /* line 84, ../sass/style.scss */
+  /* line 87, ../sass/style.scss */
   .rooms_gold {
     color: #D4AF53;
     max-width: 450px;
@@ -5991,7 +5995,7 @@ h2, .h2 {
     font-style: 14px;
     font-weight: 300;
     padding-bottom: 15px; }
-  /* line 92, ../sass/style.scss */
+  /* line 95, ../sass/style.scss */
   .rooms_number {
     font-weight: 400;
     text-align: center;
@@ -5999,70 +6003,53 @@ h2, .h2 {
     padding: 20px;
     line-height: 1.7em;
     font-size: 14px; }
-  /* line 100, ../sass/style.scss */
+  /* line 103, ../sass/style.scss */
   .rooms_price {
     font-weight: 800;
     font-size: 24px;
     color: #D4AF53; }
-    /* line 104, ../sass/style.scss */
+    /* line 107, ../sass/style.scss */
     .rooms_price i {
       font-size: 20px; }
 
-/* line 109, ../sass/style.scss */
+/* line 112, ../sass/style.scss */
 .nomer-image {
   padding: 10px; }
 
-/* line 116, ../sass/style.scss */
+/* line 119, ../sass/style.scss */
 .features h2 {
   margin: 30px;
   font-weight: 700; }
-/* line 123, ../sass/style.scss */
+/* line 126, ../sass/style.scss */
 .features_text {
   text-align: center;
   padding: 25px; }
 
-/* line 131, ../sass/style.scss */
-.cont-tel {
-  font-size: 22px;
-  padding-left: 5px;
-  vertical-align: bottom; }
-
-/* line 136, ../sass/style.scss */
-.cont-mail {
-  vertical-align: bottom; }
+/* line 134, ../sass/style.scss */
+.map-yandex {
+  padding: 10px;
+  height: 50vh; }
 
 /* line 137, ../sass/style.scss */
-.cont .cont2 {
-  margin-top: 10px; }
-
-/* line 141, ../sass/style.scss */
-.map h2 {
-  margin: 30px;
-  font-weight: 700; }
-/* line 145, ../sass/style.scss */
-.map-yandex {
-  height: 350px; }
-
-/* line 151, ../sass/style.scss */
 .house {
   width: 100%;
   height: auto;
   max-height: 200px; }
 
-/* line 152, ../sass/style.scss */
+/* line 138, ../sass/style.scss */
 .footer {
   padding-bottom: 30px;
   background-color: #212221;
   color: #fff;
   position: relative; }
-  /* line 157, ../sass/style.scss */
+  /* line 143, ../sass/style.scss */
   .footer_logo {
     color: #fff;
     padding: 50px 0; }
-  /* line 162, ../sass/style.scss */
+  /* line 148, ../sass/style.scss */
   .footer ul li {
     padding: 5px; }
-    /* line 164, ../sass/style.scss */
+    /* line 150, ../sass/style.scss */
     .footer ul li a {
       padding: 5px;
       color: #999999; }
