--- a/dev/sass/style.scss
+++ b/dev/sass/style.scss
@@ -20,6 +20,9 @@ h2,.h2 {
 		text-transform: uppercase;
 		font-size: 22px;
 	}
+.pull-left {
+    padding-right: 10px;
+}
 //TYPOGRAPHY
 //BRONIROVANIE
 .pmsWidget{position: absolute;top: 40px;z-index:0;right:10%;left:auto;}
@@ -128,24 +131,7 @@ h2,.h2 {
 //FEATURES
 
 //MAP
-.cont-tel {
-    font-size: 22px;
-    padding-left: 5px;
-	vertical-align: bottom;
-}
-.cont-mail{vertical-align: bottom;}
-.cont .cont2 {
-    margin-top: 10px;
-}
-.map {
-	h2 {
-		margin: 30px;
-		font-weight: 700;
-	}
-	&-yandex {
-		height: 350px;
-	}
-}
+.map-yandex {padding: 10px;height: 50vh;}
 //MAP
 //FOOTER
 .house {width: 100%; height:auto; max-height: 200px;}
