--- a/dev/sass/_header.scss
+++ b/dev/sass/_header.scss
@@ -35,6 +35,11 @@
 .tel{
 		font-weight:700;
 		color: $color-gold;
+		text-decoration: none;
+		&:hover,&:focus {
+			text-decoration: none;
+			color: $color-gold;
+		}
 		span, i{
 			font-size:24px;
 			color: #000;
