--- a/dev/sass/style.scss
+++ b/dev/sass/style.scss
@@ -72,7 +72,16 @@ h2,.h2 {
 	font-family: 'PT Serif', serif;
 }
 // SLIDER
+// PREMIUM
+.premium {
+	&-img {
+		margin: 10px;
+		width: 100%;
+		height: 300px;
 
+	}
+}
+// PREMIUM
 // НОМЕРА 
 .rooms {
 	padding-top: 20px;
