--- a/dev/sass/style.scss
+++ b/dev/sass/style.scss
@@ -25,7 +25,12 @@ h2,.h2 {
 }
 //TYPOGRAPHY
 //BRONIROVANIE
-.pmsWidget{position: absolute;top: 40px;z-index:0;right:10%;left:auto;}
+.pmsWidget{
+	position: absolute;
+	top: 40px;z-index:0;
+	right:10%;
+	left:auto;
+}
 // SLIDER
 .slider {
 	position: relative;
